--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -7,7 +7,7 @@
     default-src 'self';
     style-src 'self' https://fonts.googleapis.com 'unsafe-inline';
     font-src https://fonts.gstatic.com;
-    script-src 'self' https://kit.fontawesome.com 'unsafe-inline';
+    script-src 'self' 'unsafe-inline';
     img-src 'self' https://drive.google.com https://*.googleusercontent.com data:;
     connect-src 'self' https://script.google.com
   ">
@@ -77,6 +77,15 @@
   </div>
 
   <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const urlParams = new URLSearchParams(window.location.search);
+      const token = urlParams.get('tempToken');
+      if (token !== 'admin-access') {
+        document.body.innerHTML = '<h1>Acesso não autorizado</h1>';
+        return;
+      }
+    });
+
     function validarImagens(input) {
       const maxImagens = 5;
       if (input.files.length > maxImagens) {
