--- a/index.html
+++ b/index.html
@@ -493,14 +493,20 @@
 
     document.addEventListener('DOMContentLoaded', () => {
       console.log('Script carregado em:', new Date().toLocaleString('pt-BR', { timeZone: 'America/Sao_Paulo' }));
+      console.log('Hostname atual:', window.location.hostname); // Depuração
+      const adminLogin = document.getElementById('admin-login');
+      if (!adminLogin) {
+        console.error('Elemento #admin-login não encontrado');
+      } else if (window.location.hostname.includes('localhost') || window.location.hostname.includes('127.0.0.1')) {
+        console.log('Exibindo formulário de admin em localhost');
+        adminLogin.style.display = 'block';
+      } else {
+        console.log('Formulário de admin oculto (não está em localhost)');
+      }
       carregarProdutos();
       configurarBusca();
       configurarPaginacao();
       atualizarAnoFooter();
-      // Mostrar formulário de admin apenas em localhost
-      if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
-        document.getElementById('admin-login').style.display = 'block';
-      }
       document.getElementById('imageModal')?.addEventListener('click', (e) => {
         if (e.target === e.currentTarget) closeModal();
       });
