--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -24,38 +24,18 @@
         <input type="text" id="nome" name="nome" required>
       </div>
       <div class="form-group">
-        <label for="descricao">Descrição</label>
-        <textarea id="descricao" name="descricao"></textarea>
-      </div>
-      <div class="form-group">
         <label for="categoria">Categoria *</label>
         <select id="categoria" name="categoria" required>
           <option value="eletronicos">Eletrônicos</option>
           <option value="moda">Moda</option>
-          <option value="fitness">Fitness</option>
           <option value="casa">Casa</option>
-          <option value="beleza">Beleza</option>
-          <option value="esportes">Esportes</option>
-          <option value="livros">Livros</option>
-          <option value="infantil">Infantil</option>
-          <option value="celulares">Celulares</option>
-          <option value="eletrodomesticos">Eletrodomésticos</option>
-          <option value="pet">Pet</option>
-          <option value="jardinagem">Jardinagem</option>
-          <option value="automotivo">Automotivo</option>
-          <option value="gastronomia">Gastronomia</option>
-          <option value="games">Games</option>
         </select>
       </div>
       <div class="form-group">
         <label for="loja">Loja *</label>
         <select id="loja" name="loja" required>
           <option value="amazon">Amazon</option>
-          <option value="magalu">Magalu</option>
-          <option value="shein">Shein</option>
           <option value="shopee">Shopee</option>
-          <option value="mercadolivre">Mercado Livre</option>
-          <option value="alibaba">Alibaba</option>
         </select>
       </div>
       <div class="form-group">
@@ -67,84 +47,60 @@
         <input type="text" id="preco" name="preco">
       </div>
       <div class="form-group">
-        <label for="imagens">Imagens (máximo 5)</label>
-        <input type="file" id="imagens" name="imagens" multiple accept="image/*" onchange="validarImagens(this)">
+        <label for="imagens">Imagem</label>
+        <input type="file" id="imagens" name="imagens" accept="image/*">
       </div>
       <button type="submit">Adicionar Produto</button>
     </form>
-    <p id="error-message" class="error-message"></p>
     <p id="success-message" class="success-message"></p>
+    <p id="error-message" class="error-message"></p>
   </div>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const urlParams = new URLSearchParams(window.location.search);
-      const token = urlParams.get('tempToken');
-      if (token !== 'admin-access') {
+      if (new URLSearchParams(window.location.search).get('token') !== 'admin-access') {
         document.body.innerHTML = '<h1>Acesso não autorizado</h1>';
-        return;
       }
     });
-
-    function validarImagens(input) {
-      const maxImagens = 5;
-      if (input.files.length > maxImagens) {
-        alert(`Por favor, selecione no máximo ${maxImagens} imagens.`);
-        input.value = '';
-      }
-    }
 
     async function adicionarProduto(event) {
       event.preventDefault();
       const form = event.target;
       const formData = new FormData(form);
-      const errorMessage = document.getElementById('error-message');
       const successMessage = document.getElementById('success-message');
-      errorMessage.style.display = 'none';
-      successMessage.style.display = 'none';
+      const errorMessage = document.getElementById('error-message');
 
-      const imagensBase64 = [];
-      const imagemInput = form.querySelector('#imagens');
-      if (imagemInput.files.length > 0) {
-        for (let file of imagemInput.files) {
-          const base64 = await new Promise((resolve) => {
-            const reader = new FileReader();
-            reader.onload = () => resolve(reader.result);
-            reader.readAsDataURL(file);
-          });
-          imagensBase64.push(base64);
-        }
-      }
+      const imagemBase64 = await new Promise((resolve) => {
+        const file = form.querySelector('#imagens').files[0];
+        if (!file) return resolve('');
+        const reader = new FileReader();
+        reader.onload = () => resolve(reader.result);
+        reader.readAsDataURL(file);
+      });
 
       const data = {
         nome: formData.get('nome'),
-        descricao: formData.get('descricao'),
         categoria: formData.get('categoria'),
         loja: formData.get('loja'),
         link: formData.get('link'),
         preco: formData.get('preco'),
-        imagensBase64: imagensBase64
+        imagemBase64
       };
 
       try {
-        console.log('Enviando dados para Web App:', data);
         const response = await fetch('https://script.google.com/macros/s/AKfycbz_rmlp26eGQVemwRKwTZF87OZUzTQZ42xNzJm1XEI/dev', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data),
-          mode: 'cors'
+          body: JSON.stringify(data)
         });
-        console.log('Resposta da Web App:', response.status, response.statusText);
-        const result = await response.json();
-        if (result.success) {
+        if (response.ok) {
           successMessage.textContent = 'Produto adicionado com sucesso!';
           successMessage.style.display = 'block';
           form.reset();
         } else {
-          throw new Error(result.error);
+          throw new Error('Falha ao adicionar produto.');
         }
       } catch (error) {
-        console.error('Erro ao adicionar produto:', error);
         errorMessage.textContent = 'Erro: ' + error.message;
         errorMessage.style.display = 'block';
       }
