--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -9,11 +9,12 @@
     font-src https://fonts.gstatic.com;
     script-src 'self' 'unsafe-inline';
     img-src 'self' https://drive.google.com https://*.googleusercontent.com data:;
-    connect-src 'self' https://script.google.com
+    connect-src 'self' https://cors-anywhere.herokuapp.com https://script.google.com
   ">
   <title>Admin - CentrodeCompra</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body class="admin">
   <div class="form-container">
@@ -88,7 +89,7 @@
       };
 
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbz_rmlp26eGQVemwRKwTZF87OZUzTQZ42xNzJm1XEI/dev', {
+        const response = await fetch('https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbz_rmlp26eGQVemwRKwTZF87OZUzTQZ42xNzJm1XEI/dev', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
@@ -96,6 +97,7 @@
         if (response.ok) {
           successMessage.textContent = 'Produto adicionado com sucesso!';
           successMessage.style.display = 'block';
+          errorMessage.style.display = 'none';
           form.reset();
         } else {
           throw new Error('Falha ao adicionar produto.');
@@ -103,6 +105,7 @@
       } catch (error) {
         errorMessage.textContent = 'Erro: ' + error.message;
         errorMessage.style.display = 'block';
+        successMessage.style.display = 'none';
       }
     }
   </script>
