--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     font-src https://fonts.gstatic.com;
     script-src 'self' 'unsafe-inline';
     img-src 'self' https://drive.google.com https://*.googleusercontent.com data:;
-    connect-src 'self' https://opensheet.vercel.app https://cors-anywhere.herokuapp.com https://script.google.com
+    connect-src 'self' https://opensheet.vercel.app https://script.google.com
   ">
   <title>CentrodeCompra - Ofertas do Dia</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
@@ -111,7 +111,7 @@
       loadingSpinner.style.display = 'block';
       try {
         const response = await fetch(PLANILHA_URL);
-        if (!response.ok) throw new Error('Erro ao carregar produtos: ' + response.status);
+        if (!response.ok) throw new Error(`Erro ${response.status}: Falha ao carregar produtos`);
         produtos = await response.json();
         filtrarProdutos();
       } catch (error) {
