--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" />
         <div id="busca-feedback" class="busca-feedback">Buscando...</div>
         <div class="loading-spinner" id="loading-spinner">Carregando...</div>
-        <div class="grid-lojas" id="grid-produtos"></div>
+        <div class="grid-produtos" id="grid-produtos"></div>
         <p class="mensagem-vazia" id="mensagem-vazia">Nenhum produto encontrado.</p>
       </section>
     </main>
