--- a/index.html
+++ b/index.html
@@ -1,191 +1,321 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba." />
-  <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self';
-    style-src 'self' https://fonts.googleapis.com 'unsafe-inline';
-    font-src https://fonts.gstatic.com;
-    script-src 'self' 'unsafe-inline';
-    img-src 'self' https://drive.google.com https://*.googleusercontent.com data:;
-    connect-src 'self' https://opensheet.vercel.app https://script.google.com
-  ">
-  <title>CentrodeCompra - Ofertas do Dia</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-</head>
-<body>
-  <header class="site-header">
-    <div class="logo-container">
-      <img src="logos/logoscentrodecompras.jpeg" alt="CentrodeCompra" />
-    </div>
-    <div class="header-text">
-      <h1>CentrodeCompra</h1>
-      <p>Encontre as melhores ofertas do Brasil!</p>
-    </div>
-  </header>
+/* Reset básico */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  <nav>
-    <a href="./index.html">Promoções</a>
-    <a href="./cupom.html">Cupons</a>
-    <a href="./sobre.html">Sobre</a>
-    <a href="./contato.html">Contato</a>
-  </nav>
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+}
 
-  <div class="container">
-    <aside class="sidebar-categorias">
-      <h3>Categorias</h3>
-      <ul>
-        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas</li>
-        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')">Moda</li>
-        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa</li>
-      </ul>
-    </aside>
+/* Estilos do cabeçalho */
+.site-header {
+  background-color: #FFA500;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-    <main>
-      <section id="ofertas-section">
-        <h2>🛍️ Ofertas do Dia</h2>
-        <div class="lojas-parceiras">
-          <h3>🌟 Lojas Parceiras</h3>
-          <div class="grid-lojas">
-            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')" role="button">Todas</div>
-            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')" role="button">
-              <img src="logos/amazon.png" alt="Amazon" loading="lazy" />
-              <span class="amazon">Amazon</span>
-            </div>
-            <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')" role="button">
-              <img src="logos/shopee.png" alt="Shopee" loading="lazy" />
-              <span class="shopee">Shopee</span>
-            </div>
-          </div>
-        </div>
-        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" />
-        <div id="busca-feedback" class="busca-feedback">Buscando...</div>
-        <div class="loading-spinner" id="loading-spinner">Carregando...</div>
-        <div class="grid-produtos" id="grid-produtos"></div>
-        <p class="mensagem-vazia" id="mensagem-vazia">Nenhum produto encontrado.</p>
-      </section>
-    </main>
-  </div>
+.logo-container img {
+  max-width: 100px;
+  margin-right: 20px;
+}
 
-  <footer>
-    <p>🔧 Todos os direitos reservados <strong>Grupo CentrodeCompra "CdC"</strong> © <span id="year"></span></p>
-    <div id="admin-login">
-      <input type="password" id="admin-password" placeholder="Senha de admin" aria-label="Senha de administrador">
-      <button onclick="verificarSenha()">Acessar Administração</button>
-    </div>
-  </footer>
+.header-text h1 {
+  font-size: 2rem;
+  margin-bottom: 5px;
+}
 
-  <script>
-    const PLANILHA_URL = 'https://opensheet.vercel.app/1SMpUcrobcuWVGq4F_3N59rhs2_GpDo2531_2blpwEhs/Produtos';
-    let produtos = [];
-    let categoriaSelecionada = 'todas';
-    let lojaSelecionada = 'todas';
-    let termoBusca = '';
+.header-text p {
+  font-size: 1rem;
+}
 
-    function normalizarString(str) {
-      return str?.toLowerCase().normalize('NFD').replace(/[\u0300-\u036f]/g, '') || '';
-    }
+/* Estilos da navegação */
+nav {
+  background-color: #333;
+  padding: 10px;
+  text-align: center;
+}
 
-    function atualizarAnoFooter() {
-      document.getElementById('year').textContent = new Date().getFullYear();
-    }
+nav a {
+  color: white;
+  text-decoration: none;
+  margin: 0 15px;
+  font-size: 1.1rem;
+}
 
-    function verificarSenha() {
-      const senhaCorreta = 'admin123'; // Substitua por uma senha forte em produção
-      const input = document.getElementById('admin-password');
-      if (input.value === senhaCorreta) {
-        window.location.href = './admin-xyz-123.html?token=admin-access';
-      } else {
-        alert('Senha incorreta!');
-      }
-    }
+nav a:hover {
+  text-decoration: underline;
+}
 
-    async function carregarProdutos() {
-      const loadingSpinner = document.getElementById('loading-spinner');
-      const mensagemVazia = document.getElementById('mensagem-vazia');
-      loadingSpinner.style.display = 'block';
-      try {
-        const response = await fetch(PLANILHA_URL);
-        if (!response.ok) throw new Error(`Erro ${response.status}: Falha ao carregar produtos`);
-        produtos = await response.json();
-        filtrarProdutos();
-      } catch (error) {
-        mensagemVazia.textContent = 'Erro ao carregar produtos: ' + error.message;
-        mensagemVazia.style.display = 'block';
-      } finally {
-        loadingSpinner.style.display = 'none';
-      }
-    }
+/* Estilos do container principal */
+.container {
+  display: flex;
+  max-width: 1200px;
+  margin: 20px auto;
+  gap: 20px;
+}
 
-    function filtrarProdutos() {
-      const gridProdutos = document.getElementById('grid-produtos');
-      const mensagemVazia = document.getElementById('mensagem-vazia');
-      const produtosFiltrados = produtos.filter((produto) => {
-        const matchCategoria = categoriaSelecionada === 'todas' ||
-          normalizarString(produto.categoria) === normalizarString(categoriaSelecionada);
-        const matchLoja = lojaSelecionada === 'todas' ||
-          normalizarString(produto.loja) === normalizarString(lojaSelecionada);
-        const matchBusca = !termoBusca ||
-          normalizarString(produto.nome).includes(normalizarString(termoBusca));
-        return matchCategoria && matchLoja && matchBusca;
-      });
+/* Sidebar de categorias */
+.sidebar-categorias {
+  width: 250px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
 
-      gridProdutos.innerHTML = '';
-      if (produtosFiltrados.length === 0) {
-        mensagemVazia.style.display = 'block';
-        return;
-      }
+.sidebar-categorias h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
 
-      mensagemVazia.style.display = 'none';
-      produtosFiltrados.forEach((produto) => {
-        const imagens = produto.imagens?.split(',').filter(img => img.trim()) || ['imagens/placeholder.jpg'];
-        const produtoDiv = document.createElement('div');
-        produtoDiv.classList.add('produto-card', 'visible');
-        produtoDiv.innerHTML = `
-          <img src="${imagens[0]}" alt="${produto.nome || 'Produto'}" loading="lazy" />
-          <span>${produto.nome || 'Produto sem nome'}</span>
-          <span class="descricao">Loja: ${produto.loja || 'Desconhecida'}</span>
-          <p class="preco">${produto.preco ? `R$ ${produto.preco}` : 'Ver preço'}</p>
-          <a href="${produto.link || '#'}" target="_blank" class="ver-na-loja ${produto.loja ? normalizarString(produto.loja) : ''}">Comprar</a>
-        `;
-        gridProdutos.appendChild(produtoDiv);
-      });
-    }
+.sidebar-categorias ul {
+  list-style: none;
+}
 
-    function filtrarPorCategoria(categoria) {
-      categoriaSelecionada = categoria;
-      document.querySelectorAll('.categoria-item').forEach(item => item.classList.remove('ativa'));
-      document.querySelector(`.categoria-item[data-categoria="${categoria}"]`).classList.add('ativa');
-      filtrarProdutos();
-    }
+.categoria-item {
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 6px;
+  margin-bottom: 5px;
+}
 
-    function filtrarPorLoja(loja) {
-      lojaSelecionada = loja;
-      document.querySelectorAll('.loja, .loja-todas').forEach(item => item.classList.remove('ativa'));
-      document.querySelector(`[data-loja="${loja}"]`)?.classList.add('ativa') || document.querySelector('.loja-todas').classList.add('ativa');
-      filtrarProdutos();
-    }
+.categoria-item:hover {
+  background-color: #f0f0f0;
+}
 
-    function configurarBusca() {
-      const buscaInput = document.getElementById('busca');
-      buscaInput.addEventListener('input', (e) => {
-        termoBusca = e.target.value;
-        document.getElementById('busca-feedback').style.display = termoBusca ? 'block' : 'none';
-        filtrarProdutos();
-      });
-    }
+.categoria-item.ativa {
+  background-color: #FFA500;
+  color: white;
+}
 
-    document.addEventListener('DOMContentLoaded', () => {
-      console.log('Página carregada em:', window.location.href);
-      carregarProdutos();
-      configurarBusca();
-      atualizarAnoFooter();
-    });
-  </script>
-</body>
-</html>
+/* Estilos da seção principal */
+main {
+  flex: 1;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+#ofertas-section h2 {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+}
+
+.lojas-parceiras h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.grid-lojas {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.loja, .loja-todas {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  cursor: pointer;
+  text-align: center;
+  flex: 1;
+  min-width: 100px;
+}
+
+.loja img {
+  max-width: 50px;
+  display: block;
+  margin: 0 auto 5px;
+}
+
+.loja-todas {
+  background-color: #f0f0f0;
+}
+
+.loja.ativa, .loja-todas.ativa {
+  background-color: #FFA500;
+  color: white;
+  border-color: #E68A00;
+}
+
+.barra-busca {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 1rem;
+}
+
+.busca-feedback {
+  display: none;
+  color: #2E8B57;
+  margin-bottom: 10px;
+}
+
+.loading-spinner {
+  display: none;
+  text-align: center;
+  font-size: 1.2rem;
+  color: #333;
+}
+
+.grid-produtos {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.produto-card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.produto-card img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 6px;
+}
+
+.produto-card span {
+  display: block;
+  margin: 10px 0;
+  font-size: 1.1rem;
+}
+
+.descricao {
+  font-size: 0.9rem;
+  color: #666;
+}
+
+.preco {
+  font-size: 1.2rem;
+  color: #2E8B57;
+  margin: 10px 0;
+}
+
+.ver-na-loja {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #FFA500;
+  color: white;
+  text-decoration: none;
+  border-radius: 6px;
+}
+
+.ver-na-loja:hover {
+  background-color: #E68A00;
+}
+
+.mensagem-vazia {
+  display: none;
+  text-align: center;
+  color: #666;
+  margin-top: 20px;
+}
+
+/* Estilos do rodapé */
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* Estilos do formulário de autenticação */
+#admin-login {
+  text-align: center;
+  margin: 10px;
+}
+
+#admin-password {
+  padding: 10px;
+  margin-right: 5px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 14px;
+}
+
+#admin-login button {
+  padding: 10px 20px;
+  background-color: #FFA500;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+#admin-login button:hover {
+  background-color: #E68A00;
+}
+
+/* Estilos do formulário de administração */
+.form-container {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-group input,
+.form-group select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 14px;
+}
+
+.form-container button {
+  width: 100%;
+  padding: 10px;
+  background-color: #FFA500;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.form-container button:hover {
+  background-color: #E68A00;
+}
+
+.success-message {
+  color: #2E8B57;
+  display: none;
+  text-align: center;
+}
+
+.error-message {
+  color: #FF0000;
+  display: none;
+  text-align: center;
+}
