--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -3,44 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self';
-    style-src 'self' https://fonts.googleapis.com 'unsafe-inline';
-    font-src https://fonts.gstatic.com;
-    script-src 'self' 'unsafe-inline';
-    img-src 'self' https://drive.google.com https://*.googleusercontent.com data:;
-    connect-src 'self' https://script.google.com
-  ">
   <title>Admin - CentrodeCompra</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <style>
+    body { font-family: Roboto, sans-serif; margin: 20px; }
+    .form-container { max-width: 600px; margin: 0 auto; }
+    .form-group { margin-bottom: 15px; }
+    label { display: block; margin-bottom: 5px; font-weight: bold; }
+    input, select, textarea { width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px; }
+    textarea { height: 100px; }
+    button { padding: 10px 20px; background-color: #ff6200; color: white; border: none; border-radius: 4px; cursor: pointer; }
+    button:hover { background-color: #e55a00; }
+    .error-message { color: red; display: none; text-align: center; margin-top: 10px; }
+    .success-message { color: green; display: none; text-align: center; margin-top: 10px; }
+  </style>
 </head>
-<body class="admin">
+<body>
   <div class="form-container">
     <h2>Adicionar Produto</h2>
     <form id="produto-form" onsubmit="adicionarProduto(event)">
       <div class="form-group">
-        <label for="nome">Nome do Produto *</label>
+        <label for="nome">Nome do Produto</label>
         <input type="text" id="nome" name="nome" required>
       </div>
       <div class="form-group">
-        <label for="categoria">Categoria *</label>
+        <label for="descricao">Descrição</label>
+        <textarea id="descricao" name="descricao"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="categoria">Categoria</label>
         <select id="categoria" name="categoria" required>
+          <option value="">Selecione uma categoria</option>
           <option value="eletronicos">Eletrônicos</option>
           <option value="moda">Moda</option>
+          <option value="fitness">Fitness</option>
           <option value="casa">Casa</option>
+          <option value="beleza">Beleza</option>
+          <option value="esportes">Esportes</option>
+          <option value="livros">Livros</option>
+          <option value="infantil">Infantil</option>
+          <option value="celulares">Celulares</option>
+          <option value="eletrodomesticos">Eletrodomésticos</option>
+          <option value="pet">Pet</option>
+          <option value="jardinagem">Jardinagem</option>
+          <option value="automotivo">Automotivo</option>
+          <option value="gastronomia">Gastronomia</option>
+          <option value="games">Games</option>
         </select>
       </div>
       <div class="form-group">
-        <label for="loja">Loja *</label>
+        <label for="loja">Loja</label>
         <select id="loja" name="loja" required>
+          <option value="">Selecione uma loja</option>
           <option value="amazon">Amazon</option>
+          <option value="magalu">Magalu</option>
+          <option value="shein">Shein</option>
           <option value="shopee">Shopee</option>
+          <option value="mercadolivre">Mercado Livre</option>
+          <option value="alibaba">Alibaba</option>
         </select>
       </div>
       <div class="form-group">
-        <label for="link">Link do Produto *</label>
+        <label for="link">Link do Produto</label>
         <input type="url" id="link" name="link" required>
       </div>
       <div class="form-group">
@@ -48,64 +72,68 @@
         <input type="text" id="preco" name="preco">
       </div>
       <div class="form-group">
-        <label for="imagens">Imagem</label>
-        <input type="file" id="imagens" name="imagens" accept="image/*">
+        <label for="imagens">Imagens</label>
+        <input type="file" id="imagens" name="imagens" multiple accept="image/*">
       </div>
       <button type="submit">Adicionar Produto</button>
     </form>
-    <p id="success-message" class="success-message"></p>
     <p id="error-message" class="error-message"></p>
+    <p id="success-message" class="success-message"></p>
   </div>
 
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      if (new URLSearchParams(window.location.search).get('token') !== 'admin-access') {
-        document.body.innerHTML = '<h1>Acesso não autorizado</h1>';
-      }
-    });
-
     async function adicionarProduto(event) {
       event.preventDefault();
       const form = event.target;
       const formData = new FormData(form);
-      const successMessage = document.getElementById('success-message');
+      const imagensBase64 = [];
       const errorMessage = document.getElementById('error-message');
+      const successMessage = document.getElementById('success-message');
 
-      const imagemBase64 = await new Promise((resolve) => {
-        const file = form.querySelector('#imagens').files[0];
-        if (!file) return resolve('');
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result);
-        reader.readAsDataURL(file);
-      });
-
-      const data = {
-        nome: formData.get('nome'),
-        categoria: formData.get('categoria'),
-        loja: formData.get('loja'),
-        link: formData.get('link'),
-        preco: formData.get('preco'),
-        imagemBase64
-      };
+      errorMessage.style.display = 'none';
+      successMessage.style.display = 'none';
 
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbyTpnNR0poe2XQ1CoVpB58llYCDs0C_hlJL632zMVRmL7xvCz8mH6Mnpx75bYiGjO8f/exec?token=admin-access', {
+        const imagemInput = form.querySelector('#imagens');
+        if (imagemInput.files.length > 0) {
+          for (let file of imagemInput.files) {
+            const base64 = await new Promise((resolve) => {
+              const reader = new FileReader();
+              reader.onload = () => resolve(reader.result);
+              reader.readAsDataURL(file);
+            });
+            imagensBase64.push(base64);
+          }
+        }
+
+        const data = {
+          nome: formData.get('nome'),
+          descricao: formData.get('descricao'),
+          categoria: formData.get('categoria'),
+          loja: formData.get('loja'),
+          link: formData.get('link'),
+          preco: formData.get('preco'),
+          imagensBase64: imagensBase64
+        };
+
+        const response = await fetch('SUA_URL_DO_GOOGLE_APPS_SCRIPT', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
         });
+
         const result = await response.json();
-        if (!response.ok || result.error) {
-          throw new Error(result.error || `Erro ${response.status}: Falha ao adicionar produto`);
+        if (result.success) {
+          successMessage.textContent = 'Produto adicionado com sucesso!';
+          successMessage.style.display = 'block';
+          form.reset();
+        } else {
+          throw new Error(result.error || 'Erro desconhecido ao adicionar produto.');
         }
-        successMessage.textContent = 'Produto adicionado com sucesso!';
-        successMessage.style.display = 'block';
-        errorMessage.style.display = 'none';
-        form.reset();
       } catch (error) {
-        errorMessage.textContent = 'Erro: ' + error.message;
+        console.error('Erro ao adicionar produto:', error);
+        errorMessage.textContent = `Erro: ${error.message}`;
         errorMessage.style.display = 'block';
-        successMessage.style.display = 'none';
       }
     }
   </script>
