--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -116,6 +116,8 @@
           imagensBase64: imagensBase64
         };
 
+        console.log('Enviando dados:', data);
+
         const response = await fetch('SUA_URL_DO_GOOGLE_APPS_SCRIPT', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -123,6 +125,8 @@
         });
 
         const result = await response.json();
+        console.log('Resposta da API:', result);
+
         if (result.success) {
           successMessage.textContent = 'Produto adicionado com sucesso!';
           successMessage.style.display = 'block';
