--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -1,21 +1,90 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin - CentrodeCompra</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Roboto, sans-serif; margin: 20px; }
-    .form-container { max-width: 600px; margin: 0 auto; }
-    .form-group { margin-bottom: 15px; }
-    label { display: block; margin-bottom: 5px; font-weight: bold; }
-    input, select, textarea { width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px; }
-    textarea { height: 100px; }
-    button { padding: 10px 20px; background-color: #ff6200; color: white; border: none; border-radius: 4px; cursor: pointer; }
-    button:hover { background-color: #e55a00; }
-    .error-message { color: red; display: none; text-align: center; margin-top: 10px; }
-    .success-message { color: green; display: none; text-align: center; margin-top: 10px; }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #fff;
+      color: #333;
+      padding: 20px;
+    }
+    .form-container {
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: #f9f9f9;
+      padding: 20px;
+      border-radius: 5px;
+      border: 1px solid #e0e0e0;
+    }
+    .form-container h2 {
+      font-size: 1.5em;
+      margin-bottom: 20px;
+      text-align: center;
+      color: #FFA500;
+    }
+    .form-group {
+      margin-bottom: 15px;
+    }
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+      color: #333;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1em;
+    }
+    textarea {
+      height: 100px;
+      resize: vertical;
+    }
+    button {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      background-color: #FFA500;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1em;
+    }
+    button:hover {
+      background-color: #e69500;
+    }
+    .error-message {
+      color: red;
+      text-align: center;
+      margin-top: 10px;
+      display: none;
+    }
+    .success-message {
+      color: #28a745;
+      text-align: center;
+      margin-top: 10px;
+      display: none;
+    }
+    @media (max-width: 480px) {
+      .form-container {
+        padding: 15px;
+      }
+      button {
+        font-size: 0.9em;
+      }
+    }
   </style>
 </head>
 <body>
