--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     font-src 'self' https://fonts.gstatic.com;
     worker-src 'self' blob:;
     frame-src 'self' https://googleads.g.doubleclick.net https://tpc.googlesyndication.com;
-    connect-src 'self' https://ep1.adtrafficquality.google https://www.google-analytics.com https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net https://opensheet.vercel.app https://bingaby.github.io https://www.centrodecompra.com.br BACKEND_URL;
+    connect-src 'self' https://ep1.adtrafficquality.google https://www.google-analytics.com https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net https://opensheet.vercel.app https://bingaby.github.io https://www.centrodecompra.com.br https://centro-de-compras-lq4c7dc5g-centrodecompra.vercel.app;
   ">
   <title>CentrodeCompra - Ofertas do Dia</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
@@ -32,7 +32,6 @@
   <link rel="apple-touch-icon" sizes="180x180" href="https://www.centrodecompra.com.br/logos/apple-touch-icon.png">
   <link rel="manifest" href="https://www.centrodecompra.com.br/logos/site.webmanifest">
   <style>
-    /* [Estilos mantidos idênticos ao original para evitar alterações visuais] */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -484,6 +483,7 @@
       .header-text h1 { font-size: 1.5em; }
       .header-text p { font-size: 0.9em; }
       .grid-produtos { grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); }
+      .produto-card { padding: 8px; }
       .produto-card img { height: 120px; }
       .ver-na-loja { padding: 5px 10px; font-size: 0.8em; }
       .adsbygoogle { height: 90px; }
